se modifico toda la estructura con bootstrap y añadi imgs

--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -13,75 +13,110 @@
     <title>TAEKWON-DO ITF - Donde encontrarnos</title>
 </head>
 
-<body>
-    <header>
-        <!--Barra de navegacion-->
-        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
+<body class="container-fluid">
+    <section class="row">
+        <section class="col-12">
 
-        <nav class="navbar navbar-expand-lg nav1">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/dondeencontrarnos.html">Localización</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
 
-    </header>
-    <main class="main">
-        <section>
-            <!--Datos localizacion-->
-            <br>
-            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                    class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;" src="../img/itf.jpg"
-                    alt="itf logo" class="itf"></h1>
-            <br><br><br>
-            <hr class="hrborder"><br><br>
+            <section class="container-fluid">
+                <section class="row">
 
-            <p class="texto11">Encontranos en: <br><br> CLUB LA TABLADA</p><br><br><br>
-            <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
-            <p class="texto11">DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
-                CAPITAL - ARGENTINA<br><br>LUNES Y VIERNES - INFANTILES 19HS.<br><br>LUNES Y VIERNES -
-                ADOLESCENTES/ADULTOS 20HS.</p><br><br><br>
+                    <header class="col-xl-12">
+                        <!--Barra de navegacion-->
+                        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
+                        <br><br>
 
+                        <nav class="navbar navbar-expand-lg nav1">
+                            <div class="container-fluid">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarText">
+                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../index.html">Inicio</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto"
+                                                href="../pages/dondeencontrarnos.html">Localización</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/contacto.html">Contacto</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </nav>
+
+                    </header>
+
+                </section>
+            </section>
+
+
+            <!-- Contenido principal-->
+            <main class="container-fluid">
+
+                <section class="row">
+                    <section class="col-xl-12">
+                        <br>
+                        <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
+                                class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;"
+                                src="../img/itf.jpg" alt="itf logo" class="itf"></h1>
+                        <br><br><br>
+                    </section>
+                </section>
+
+                <section class="row">
+                    <section class="col-xl-12">
+                        <p class="texto11">Encontranos en: <br><br> CLUB LA TABLADA</p><br><br><br>
+                        <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
+                        <p class="texto11">DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
+                            CAPITAL - ARGENTINA<br><br>LUNES Y VIERNES - INFANTILES 19HS.<br><br>LUNES Y VIERNES -
+                            ADOLESCENTES/ADULTOS 20HS.</p><br><br><br>
+                    </section>
+                </section>
+
+            </main>
+
+
+
+
+            <section class="row">
+                <section class="col-xl-12">
+                    <!-- Pie de pagina-->
+                    <footer>
+
+                        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
+                        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                                src="../img/logoinsta.png" alt="logo instagram"></a>
+                        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
+                                src="../img/logofb.png" alt="logo facebook"></a>
+                        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
+                                src="../img/logotwitter.png" alt="logo twitter"></a>
+                        <br><br><br><br>
+                        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+
+                    </footer>
+
+                </section>
+            </section>
 
         </section>
-    </main>
 
-    <footer>
-        <!--pie de pagina-->
 
-        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                src="../img/logoinsta.png" alt="logo instagram"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logo facebook"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logo twitter"></a>
-        <br><br><br><br>
-        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+    </section>
 
-    </footer>
 
+    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
