--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -13,96 +13,140 @@
     <title>TAEKWON-DO ITF - GALERIA</title>
 </head>
 
-<body>
+<body class="container-fluid">
+    <section class="row">
+        <section class="col-12">
 
-    <header>
-        <!--barra de navegacion-->
-        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
 
-        <nav class="navbar navbar-expand-lg nav1">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/dondeencontrarnos.html">Localización</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link navtexto" href="../pages/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+            <section class="container-fluid">
+                <section class="row">
 
-    </header>
-    <main class="main">
-        <section>
-            <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
-            <br>
-            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                    class="itf">Galeria de fotos<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo"
-                    class="itf"></h1><br><br>
-            <hr class="hrborder"><br><br>
+                    <header class="col-xl-12">
+                        <!--Barra de navegacion-->
+                        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
+                        <br><br>
 
-            <section id="carouselprincipal" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/suska1.jpg" class="d-block w-100 fotogaleria4" alt="suska pateando">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/suska2.jpg" class="d-block w-100 fotogaleria4" alt="suska pateando2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/t3.jpg" class="d-block w-100 fotogaleria4" alt="pateando">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselprincipal"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselprincipal"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                        <nav class="navbar navbar-expand-lg nav1">
+                            <div class="container-fluid">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false"
+                                    aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                                <div class="collapse navbar-collapse" id="navbarText">
+                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../index.html">Inicio</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto"
+                                                href="../pages/dondeencontrarnos.html">Localización</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link navtexto" href="../pages/contacto.html">Contacto</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </nav>
+
+                    </header>
+
+                </section>
             </section>
 
-            <br><br><br>
+
+            <!-- Contenido principal-->
+            <main class="container-fluid">
+
+                <section class="row">
+                    <section class="col-xl-12">
+                        <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
+                        <br>
+                        <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
+                                class="itf">Galeria de fotos<img style="margin-left: 30px;" src="../img/itf.jpg"
+                                alt="itf logo" class="itf"></h1>
+                    </section>
+
+                </section>
+                <br><br>
+                <section class="row">
+                    <section class="col-xl-6">
+                        <h2 class="promocion1">Las mejores fotos del torneo!</h2>
+                    </section>
+                </section>
+
+                <br><br>
+                <section class="row">
+                    <section class="col-xl-12">
+                        <div id="carouselExampleDark" class="carousel carousel-dark slide c1" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" data-bs-interval="10000">
+                                    <img src="../img/taekwondo2.jpg" class="d-block w-100 c2" alt="torneo taekwondo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                    </div>
+                                </div>
+                                <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="../img/taekwondo4.jpg" class="d-block w-100 c2" alt="torneo taekwondo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../img/taekwondo5.jpg" class="d-block w-100 c2" alt="torneo taekwondo">
+                                    <div class="carousel-caption d-none d-md-block">
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </section>
+                </section>
+
+            </main>
+
+
+            <section class="row">
+                <section class="col-xl-12">
+                    <!-- Pie de pagina-->
+                    <footer>
+
+                        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
+                        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                                src="../img/logoinsta.png" alt="logo instagram"></a>
+                        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
+                                src="../img/logofb.png" alt="logo facebook"></a>
+                        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
+                                src="../img/logotwitter.png" alt="logo twitter"></a>
+                        <br><br><br><br>
+                        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+
+                    </footer>
+
+                </section>
+            </section>
 
         </section>
 
-    </main>
 
-    <footer>
-        <!--pie de pagina-->
-
-        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                src="../img/logoinsta.png" alt="logo instagram"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logo facebook"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logo twitter"></a>
-        <br><br><br><br>
-        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
-
-    </footer>
+    </section>
 
 
+    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
