--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>TAEKWOND-DO ITF - INICIO</title>
 </head>
 
@@ -65,7 +65,6 @@
 
             <!--Contenido principal-->
             <main class="container-fluid">
-
                 <br>
                 <section class="row">
 
@@ -76,35 +75,75 @@
 
                     </section>
                 </section>
-                <br><br><br><br>
+                <br><br>
+
+                <br>
                 <section class="row">
+                    <section class="col-sm-12 col-md-6 col-lg-12">
 
-                    <div class="col-xl-12">
-                        <h3 class="promocion1">PROMOCIÓN ESPECIAL SEPTIEMBRE!</h3>
-                    </div>
+                        <div class="card cardtamano">
+                            <a href="./pages/historia.html"><img class="fotocard1" src="./img/20añosfallecimiento.jpeg"
+                                    alt="foto fallecimiento general choi" /></a><br>
+                            <div class="card-body fondocard">
+                                <h5 class="card-title textcard">GENERAL CHOI</h5>
+                                <p class="card-text textcard1"> A 20 AÑOS DE SU FALLECIMIENTO </p>
+                            </div>
+                        </div>
 
+                    </section>
+                </section>
+                <br><br>
+
+                <section class="row">
+                    <section class="col-sm-12 col-md-6 col-lg-12">
+
+                        <div class="card cardtamano">
+                            <a href="./pages/galeria.html"><img class="fotocard1" src="./img/mundial2023.jpg"
+                                    alt="foto mundial 2023" /></a><br>
+                            <div class="card-body fondocard">
+                                <h5 class="card-title textcard">MUNDIAL TAEKWONDO 2023</h5>
+                                <p class="card-text textcard1">Las mejores fotos!</p>
+                            </div>
+                        </div>
+
+                    </section>
+
+                </section>
+
+
+                <br><br>
+                <section class="row">
+                    <section class="col-sm-12 col-md-6 col-lg-12">
+
+                        <div class="card cardtamano">
+                            <a href="./pages/contacto.html"><img class="fotocard1" src="./img/67años.jpg"
+                                    alt="foto 67 años tkd" /></a><br>
+                            <div class="card-body fondocard">
+                                <h5 class="card-title textcard">CONTACTENOS</h5>
+                            </div>
+                        </div>
+
+                    </section>
                 </section>
                 <br><br>
                 <section class="row">
-                    <section class="col-xl-12">
+                    <section class="col-sm-12 col-md-6 col-lg-12">
 
-                        <img class="imagenindex1" src="./img/folletopromocion.jpg" alt="folleto promocion">
+                        <div class="card cardtamano">
+                            <a href="./pages/dondeencontrarnos.html"><img class="fotocard1" src="./img/Worldcup.jpg"
+                                    alt="foto mundial 2023" /></a><br>
+                            <div class="card-body fondocard">
+                                <h5 class="card-title textcard">¿Queres entrenar con nosotros?</h5>
+                                <p class="card-text textcard1">Haz click en esta foto!</p>
+                            </div>
+                        </div>
 
-                    </section>
-                </section>
-                <br><br><br>
-                <section class="row">
-                    <section class="col-xl-12">
-                        <h2 class="texto3">Llevando este folleto tenes <span class="colortex">UN MES GRATIS</span> para
-                            entrenar
-                            con
-                            nosotros!<br><br> Te lo vas
-                            a perder?
-                        </h2>
                     </section>
 
                 </section>
                 <br><br><br>
+
+
             </main>
 
             <section class="row">
