--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="taekwondo, artes marciales, luchas, defensa personal, peleas, cordoba, la tablada">
+    <meta name="description" content="Sitio de Taekwondo ITF - Córdoba Argentina">
     <link rel="shortcut icon" href="../img/logo.jpg">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -82,8 +84,26 @@
                         <p class="texto11">DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
                             CAPITAL - ARGENTINA<br><br>LUNES Y VIERNES - INFANTILES 19HS.<br><br>LUNES Y VIERNES -
                             ADOLESCENTES/ADULTOS 20HS.</p><br><br><br>
+
+
                     </section>
                 </section>
+
+                <section class="row">
+                    <section class="col-12">
+                        <div>
+                            <a href="../pages/contacto.html">
+                                <h3 class="buttoninfo">
+                                    PARA MAS INFO CONTACTANOS!
+                                </h3>
+                            </a>
+
+
+                        </div>
+                    </section>
+                </section>
+
+
 
             </main>
 
