--- a/pages/historia.html
+++ b/pages/historia.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="taekwondo, artes marciales, luchas, defensa personal, peleas, cordoba, la tablada">
+    <meta name="description" content="Sitio de Taekwondo ITF - Córdoba Argentina">
     <link rel="shortcut icon" href="../img/logo.jpg">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
