se modifica estructuras y scss

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -119,6 +119,16 @@
                     </section>
                 </section>
 
+                <section class="row">
+                    <section class="col-xl-12">
+                        <p class="pcarrousel">
+                            VIVIMOS CON GRAN PASIÓN ESTE ARTE MARCIAL QUE NOS UNE!
+
+                        </p>
+                        <br><br>
+                    </section>
+                </section>
+
             </main>
 
 
