se modifica footer y se modifica medias

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -137,13 +137,17 @@
                     <!-- Pie de pagina-->
                     <footer>
 
+                        <a href="../index.html"><img class="iconopagfooter" src="../img/logo.jpg" alt="logo pagina"></a>
                         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
                         <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                                src="../img/logoinsta.png" alt="logo instagram"></a>
+                                src="../img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
                         <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
-                                src="../img/logofb.png" alt="logo facebook"></a>
+                                src="../img/logofb.png" alt="logo facebook" title="Facebook"></a>
                         <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
-                                src="../img/logotwitter.png" alt="logo twitter"></a>
+                                src="../img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
+                        <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
+                            Diegon.villegas@gmail.com</p>
+
                         <br><br><br><br>
                         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
