--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -71,7 +71,7 @@
                     <section class="col-xl-12">
                         <br>
                         <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                                class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;"
+                                class="itf">¡Entrena con nosotros!<img style="margin-left: 30px;"
                                 src="../img/itf.jpg" alt="itf logo" class="itf"></h1>
                         <br><br><br>
                     </section>
