Se modifica styles y estructuras basicas

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
                     </section>
                 </section>
-                <br><br>
+             
 
-                <br>
+                <br><br><br>
                 <section class="row">
                     <section class="col-sm-12 col-md-12 col-lg-12">
 
@@ -94,7 +94,8 @@
 
                     </section>
                 </section>
-                <br><br>
+                <br><br><br><br><br><br>
+
 
                 <section class="row">
                     <section class="col-sm-12 col-md-12 col-lg-12">
@@ -113,7 +114,7 @@
                 </section>
 
 
-                <br><br>
+                <br><br><br><br><br><br>
                 <section class="row">
                     <section class="col-sm-12 col-md-12 col-lg-12">
 
@@ -127,7 +128,9 @@
 
                     </section>
                 </section>
-                <br><br>
+
+
+                <br><br><br><br>
                 <section class="row">
                     <section class="col-sm-12 col-md-12 col-lg-12">
 
@@ -143,7 +146,7 @@
                     </section>
 
                 </section>
-                <br><br><br>
+                <br><br><br><br><br><br>
 
 
             </main>
@@ -152,21 +155,22 @@
                 <section class="col-xl-12">
                     <!-- Pie de pagina-->
                     <footer>
+                        <div class="divfooter">
+                            <a href="./index.html"><img class="iconopagfooter" src="./img/logo.jpg"
+                                    alt="logo pagina"></a>
+                            <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
+                            <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                                    src="./img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
+                            <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
+                                    src="./img/logofb.png" alt="logo facebook" title="Facebook"></a>
+                            <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
+                                    src="./img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
+                            <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
+                                Diegon.villegas@gmail.com</p>
 
-                        <a href="./index.html"><img class="iconopagfooter" src="./img/logo.jpg" alt="logo pagina"></a>
-                        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-                        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                                src="./img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
-                        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
-                                src="./img/logofb.png" alt="logo facebook" title="Facebook"></a>
-                        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
-                                src="./img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
-                        <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
-                            Diegon.villegas@gmail.com</p>
-
-                        <br><br>
-                        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
-
+                            <br><br>
+                            <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+                        </div>
                     </footer>
 
                 </section>
