--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,81 +80,91 @@
                     </section>
                 </section>
 
-                <section class="row">
-                    <section class="col-xl-12">
-
-                        <div>
-                            <form>
-                                <fieldset class="formulario1">
-                                    <br><br>
-                                    <h3 class="textoform">Datos Personales</h3>
-                                    <br /><br />
-                                    <label class="textoform" for="Nombre">Ingresa tu Nombre</label>
-                                    <br />
-                                    <input id="Nombre" type="Text" placeholder="Aquí">
-                                    <br /><br />
-                                    <label class="textoform" for="Email"> Ingresa tu Email</label>
-                                    <br />
-                                    <input id="Email" type="email" placeholder="Aquí">
-                                    <br /><br />
-                                    <label class="textoform" for="Pais">Selecciona tu país</label>
-                                    <br />
-                                    <select>
-                                        <option>Argentina</option>
-                                        <option>Brasil</option>
-                                        <option>Uruguay</option>
-                                        <option>Paraguay</option>
-                                        <option>Chile</option>
-                                        <option>Colombia</option>
-                                        <option>Venezuela</option>
-                                        <option>Otros</option>
-                                    </select>
-                                    <br /><br />
-                                    <label class="textoform" for="Comentario">Ingresa tus comentarios</label>
-                                    <br /><br />
-                                    <textarea placeholder="Aquí"></textarea>
-                                    <br />
-
-                                    <br />
-                                    <input class="form1" type="submit" Value="Enviar">
-                                    <br />
-                                    <br>
-                                </fieldset><br><br><br>
-
-
+                <form class="row g-12">
+                    <div class="formunew">
+                        <div class="col-12">
+                            <label for="inputNombre" class="form-label textoform">Nombre</label>
+                            <input type="text" class="form-control textoform" id="inputName" placeholder="Tu nombre...">
+                        </div><br>
+                        <div class="col-md-12">
+                            <label for="inputEmail4" class="form-label textoform">Email</label>
+                            <input type="email" class="form-control" id="inputEmail4">
+                        </div><br>
+                        <div class="col-12">
+                            <label for="inputNumero" class="form-label textoform">Telefono</label>
+                            <input type="text" class="form-control textoform" id="inputnumber"
+                                placeholder="Tu Número de telefono">
+                        </div><br>
+                        <div class="col-md-12">
+                            <label for="inputState" class="form-label textoform">Pais</label><br>
+                            <select class="textoform">
+                                <option>Argentina</option>
+                                <option>Brasil</option>
+                                <option>Uruguay</option>
+                                <option>Paraguay</option>
+                                <option>Chile</option>
+                                <option>Colombia</option>
+                                <option>Venezuela</option>
+                                <option>Otros</option>
+                            </select>
+                        </div><br>
+                        <div class="col-md-12">
+                            <label for="inputCity" class="form-label textoform">City</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div><br>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="gridCheck">
+                                <label class="form-check-label textoform" for="gridCheck">
+                                    Acepto que se comuniquen conmigo
+                                </label>
+                            </div>
+                        </div><br>
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary textoform">Enviar</button>
                         </div>
+                    </div>
+                </form>
 
-                    </section>
-                </section>
 
 
-            </main>
 
-            <section class="row">
-                <section class="col-xl-12">
-                    <!-- Pie de pagina-->
-                    <footer>
+                <br><br><br>
 
-                        <a href="../index.html"><img class="iconopagfooter" src="../img/logo.jpg" alt="logo pagina"></a>
-                        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-                        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                                src="../img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
-                        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
-                                src="../img/logofb.png" alt="logo facebook" title="Facebook"></a>
-                        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
-                                src="../img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
-                        <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
-                            Diegon.villegas@gmail.com</p>
 
-                        <br><br><br><br>
-                        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
-
-                    </footer>
-
-                </section>
-            </section>
+                </div>
 
         </section>
+    </section>
+
+
+    </main>
+
+    <section class="row">
+        <section class="col-xl-12">
+            <!-- Pie de pagina-->
+            <footer>
+                <div class="divfooter">
+                    <a href="../index.html"><img class="iconopagfooter" src="../img/logo.jpg" alt="logo pagina"></a>
+                    <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
+                    <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                            src="../img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
+                    <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
+                            src="../img/logofb.png" alt="logo facebook" title="Facebook"></a>
+                    <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
+                            src="../img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
+                    <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
+                        Diegon.villegas@gmail.com</p>
+
+                    <br><br><br><br>
+                    <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+                </div>
+            </footer>
+
+        </section>
+    </section>
+
+    </section>
 
 
     </section>
