--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -71,8 +71,8 @@
                     <section class="col-xl-12">
                         <br>
                         <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                                class="itf">¡Entrena con nosotros!<img style="margin-left: 30px;"
-                                src="../img/itf.jpg" alt="itf logo" class="itf"></h1>
+                                class="itf">¡Entrena con nosotros!<img style="margin-left: 30px;" src="../img/itf.jpg"
+                                alt="itf logo" class="itf"></h1>
                         <br><br><br>
                     </section>
                 </section>
@@ -114,21 +114,22 @@
                 <section class="col-xl-12">
                     <!-- Pie de pagina-->
                     <footer>
+                        <div class="divfooter">
+                            <a href="../index.html"><img class="iconopagfooter" src="../img/logo.jpg"
+                                    alt="logo pagina"></a>
+                            <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
+                            <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                                    src="../img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
+                            <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
+                                    src="../img/logofb.png" alt="logo facebook" title="Facebook"></a>
+                            <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
+                                    src="../img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
+                            <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
+                                Diegon.villegas@gmail.com</p>
 
-                        <a href="../index.html"><img class="iconopagfooter" src="../img/logo.jpg" alt="logo pagina"></a>
-                        <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-                        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                                src="../img/logoinsta.png" alt="logo instagram" title="Instagram"></a>
-                        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored"
-                                src="../img/logofb.png" alt="logo facebook" title="Facebook"></a>
-                        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored"
-                                src="../img/logotwitter.png" alt="logo twitter" title="Twitter"></a><br><br>
-                        <p class="pcontactfot" title="diegon.villegas@gmail.com">Contacto: <br>
-                            Diegon.villegas@gmail.com</p>
-
-                        <br><br><br><br>
-                        <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
-
+                            <br><br><br><br>
+                            <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
+                        </div>
                     </footer>
 
                 </section>
