se modifica formato de formulario en contacto y se acomodaron cards en index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,15 +82,16 @@
 
                 <form class="row g-12">
                     <div class="formunew">
-                        <div class="col-12">
+                        <div class="col-md-12">
                             <label for="inputNombre" class="form-label textoform">Nombre</label>
                             <input type="text" class="form-control textoform" id="inputName" placeholder="Tu nombre...">
                         </div><br>
                         <div class="col-md-12">
                             <label for="inputEmail4" class="form-label textoform">Email</label>
-                            <input type="email" class="form-control" id="inputEmail4">
+                            <input type="email" class="form-control textoform" id="inputEmail4"
+                                placeholder="Tu Email...">
                         </div><br>
-                        <div class="col-12">
+                        <div class="col-md-12">
                             <label for="inputNumero" class="form-label textoform">Telefono</label>
                             <input type="text" class="form-control textoform" id="inputnumber"
                                 placeholder="Tu Número de telefono">
@@ -98,21 +99,22 @@
                         <div class="col-md-12">
                             <label for="inputState" class="form-label textoform">Pais</label><br>
                             <select class="textoform">
-                                <option>Argentina</option>
-                                <option>Brasil</option>
-                                <option>Uruguay</option>
-                                <option>Paraguay</option>
-                                <option>Chile</option>
-                                <option>Colombia</option>
-                                <option>Venezuela</option>
-                                <option>Otros</option>
+                                <option class="textoform">Argentina</option>
+                                <option class="textoform">Brasil</option>
+                                <option class="textoform">Uruguay</option>
+                                <option class="textoform">Paraguay</option>
+                                <option class="textoform">Chile</option>
+                                <option class="textoform">Colombia</option>
+                                <option class="textoform">Venezuela</option>
+                                <option class="textoform">Otros</option>
                             </select>
                         </div><br>
                         <div class="col-md-12">
-                            <label for="inputCity" class="form-label textoform">City</label>
-                            <input type="text" class="form-control" id="inputCity">
+                            <label for="exampleFormControlTextarea1" class="form-label textoform">Comentario</label>
+                            <textarea class="form-control textoform" id="exampleFormControlTextarea1" rows="3"
+                                placeholder="Tu Comentario..."></textarea>
                         </div><br>
-                        <div class="col-12">
+                        <div class="col-md-12">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="gridCheck">
                                 <label class="form-check-label textoform" for="gridCheck">
@@ -120,7 +122,7 @@
                                 </label>
                             </div>
                         </div><br>
-                        <div class="col-12">
+                        <div class="col-md-12">
                             <button type="submit" class="btn btn-primary textoform">Enviar</button>
                         </div>
                     </div>
